chore: add .dockerignore and update docker-compose to use relative path for budget_data volume

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     ports:
       - "${APP_PORT:-8000}:8000"
     volumes:
-      - budget_data:/app/data
+      - ./budget_data:/app/data
     restart: unless-stopped
 
 volumes:
